# weather_forecasting_end2end

./: .gitignore  Dockerfile  Makefile  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
api/: main.py  models.py  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
k8s/: deployment.yaml  pod.yaml  service.yaml
notebooks/: baseline_model.ipynb  experiments1.ipynb  experiments3.ipynb  xgboost_hp.py
reports/: .gitignore
scripts/: promote_model.py
src/features/: data_clean.py  data_preprocessing.py  feature_engineering.py
src/model/: model_building.py  model_evaluation.py  register_model.py
