[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "weather_forecasting_end2end"
version = "0.0.1"
description = "This is production grade end to end machine learning project."
authors = [
  { name = "Shahriar Kabir" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["weather_forecasting_end2end"]
include = ["pyproject.toml", "weather_forecasting_end2end/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["weather_forecasting_end2end"]
force-sort-within-sections = true

